.provarCaches/00D5f000005vwGkEAI/objects/rstk__uponhand__c.object
<CustomObject>
    <description>uponhand__c</description>
    <fields>
        <fullName>rstk__uponhand_condition__c</fullName>
        <label>Condition</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__uponhand_division__c</fullName>
        <label>Division</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__uponhand_error__c</fullName>
        <label>Error Condition</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__uponhand_expdate__c</fullName>
        <label>Lot Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__uponhand_item__c</fullName>
        <label>Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__uponhand_location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__uponhand_locqty__c</fullName>
        <label>Location Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__uponhand_lotno__c</fullName>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__uponhand_quarref__c</fullName>
        <label>Quar Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__uponhand_txnstatus__c</fullName>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__uponhand_uom__c</fullName>
        <label>UOM</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Uploaded Inventory Balances</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Uploaded Inventory Balances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>